# media

./: Cargo.toml  README.md
.github/workflows/: rust.yml
backends/gstreamer/: audio_decoder.rs  audio_sink.rs  audio_stream_reader.rs  lib.rs  media_capture.rs  media_stream_source.rs  player.rs  registry_scanner.rs  render.rs  source.rs  webrtc.rs
backends/gstreamer/render-android/: lib.rs
backends/gstreamer/render-unix/: lib.rs
examples/android/: build.sh  build_gst_so.sh
examples/android/app3/app/jni/: arm64.mk
examples/android/jni/: Android.mk
examples/android/lib/: Cargo.toml
examples/android/lib/.cargo/: config
examples/android/lib/src/: lib.rs
examples/android/libgstreamer_android_gen/: build_gst_so.sh
examples/android/libgstreamer_android_gen/jni/: arm64.mk
