[package]
name = "servo_media_android2"
description = "Android lib to use Servo Media from Android Java"
version = "0.1.0"
authors = ["Fernando Jiménez Moreno <ferjmoreno@gmail.com>"]

[workspace]
members = [
  "audio",
  "backends/auto",
  "backends/dummy",
  "backends/gstreamer",
  "backends/gstreamer/render",
  "backends/gstreamer/render-unix",
  "examples",
  "examples/android/lib",
  "player",
  "servo-media",
  "servo-media-derive",
  "streams",
  "webrtc"
]

# Android-specic configuration follows.
[package.metadata.android]
# Name of your APK as shown in the app drawer and in the app switcher
apk_label = "Hip Startup"

build_targets = [ "aarch64-linux-android" ]

# The target Android API level.
target_sdk_version = 31
min_sdk_version = 21
 
# See: https://developer.android.com/guide/topics/manifest/activity-element#screen
orientation = "portrait"

runtime_libs = "/home/alex/Документы/android/media/examples/android/libs"
